tests/fixtures/invalid/bool_sub_str.py
# Cannot subtract Bool and Str
x: bool = True - "hello"
